# ros_opencog_robot_embodiment

./: CMakeLists.txt  README.md  manifest.xml
cog_irc/: CMakeLists.txt  package.xml
cog_irc/include/cog_irc/: CogitaConfig.h  IRC.h
cog_irc/msg/: irc_msg.msg
cog_irc/src/: CogitaConfig.cc  IRC.cc  go-irc.cc
embodiment/: CMakeLists.txt  LICENSE  mainpage.dox
embodiment/launch/: ros_opencog_robot_embodiment.launch~
embodiment/src/: Block.cpp  Block.h  Constants.cpp  OacMessage.cpp  OacMessage.h  OacPublisher.h  OacSubscriber.cpp  OacSubscriber.h  RobotEmbodiment.cpp  RobotEmbodiment.h
launch/: block_generator.launch  office_map.pgm  office_map.yaml  ros_opencog_robot_embodiment.launch  turtlebot_office.launch
src/: Constants.cpp  Constants.h  OacMessage.cpp  OacMessage.h  OacPublisher.cpp  OacPublisher.h  OacServer.cpp  OacServer.h  OacSubscriber.cpp  OacSubscriber.h  OpenCogNavPlanner.cpp  OpenCogNavPlanner.h  RobotEmbodiment.cpp  RobotEmbodiment.h  Util.cpp  Util.h  opencog_msgs.pai_msgs.pb.h  opencog_msgs.pai_msgs.proto
src/actions/: Action.cpp  Action.h  ActionPlan.cpp  ActionPlan.h  Eat.cpp  Eat.h  NavigateTo.cpp  NavigateTo.h  Pickup.cpp  Pickup.h
src/entities/: Map.cpp  Map.h  Robot.cpp  Robot.h
src/msgs/: opencog_msgs.pai_msgs.pb.cc
src/network/: OacMessage.cpp  OacMessage.h  OacPublisher.cpp  OacPublisher.h  OacSubscriber.cpp  OacSubscriber.h
